fix group sidebar inner flexbox stretching

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1022,7 +1022,6 @@ article#maincontent {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 5px;
 }
 
 .sidebar .section_countline .countline_display {
@@ -1067,7 +1066,7 @@ article#maincontent {
 
 .sidebar.sidebar_has_avatar .sidebar_section-avatar {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   text-align: center;
   flex-direction: column;
   padding: 10px;
@@ -1081,6 +1080,7 @@ article#maincontent {
   width: 70px;
   height: 70px;
   border: 2px solid #00e6c3;
+  align-self: center;
 }
 
 .sidebar.sidebar_has_avatar .sidebar_section-avatar .sidebar_avatar_name {
@@ -1099,16 +1099,13 @@ article#maincontent {
   font-size: 0.8rem;
 }
 
-.sidebar.sidebar_has_avatar .sidebar_avatar_members {
-  margin-top: 5px;
-}
-
 .sidebar.sidebar_has_avatar .sidebar_avatar_members .empty {
   color: #7a7a7a;
   font-size: 700;
 }
 
 .sidebar.sidebar_has_avatar .sidebar_avatar_members .members_list {
+  margin: 5px 0;
   display: flex;
   flex-direction: row;
   align-items: center;
